@@ -4,14 +4,12 @@ S3method(fortify,compareClusterResult)
 export(GSEA)
 export(Gff2GeneTable)
 export(bitr)
-export(cnetplot)
 export(compareCluster)
 export(dropGO)
 export(enrichDAVID)
 export(enrichGO)
 export(enrichKEGG)
 export(enrichMKEGG)
-export(enrichMap)
 export(enricher)
 export(gofilter)
 export(groupGO)
@@ -33,6 +31,7 @@ importClassesFrom(DOSE,gseaResult)
 importClassesFrom(methods,data.frame)
 importClassesFrom(topGO,topGOdata)
 importFrom(AnnotationDbi,Ontology)
+importFrom(AnnotationDbi,as.list)
 importFrom(AnnotationDbi,keys)
 importFrom(AnnotationDbi,keytypes)
 importFrom(AnnotationDbi,select)
